discussion/kv_engine/129910/129910_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge branch mad-hatter into master

* commit '9b06cd8b':
  MB-37680: Reduce differences between eph and persistent backfill

Change-Id: I01861262e8896c445401ce908fd60ee143014336

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-06-05 09:55:51.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-05 09:59:44.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24422/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24422/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28395/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28395/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11839/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2597/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2639:53: error: too few arguments to function call, single argument "engine" was not specified [clang-diagnostic-error]
    const void* cookie = testHarness->create_cookie();
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/engine_testapp.h:64:5: note: "create_cookie" declared here
    virtual const void* create_cookie(EngineIface* engine) = 0;
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2597/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2639:53:
error: too few arguments to function call, single argument "engine" was not specified [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4003/ : FAILURE

Compile error at [2020-06-05T09:58:51.618Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2639:53:
error: no matching function for call to ?test_harness::create_cookie()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4003/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3065/ : FAILURE

Compile error at [2020-06-05T09:57:19.168Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2639:53:
error: too few arguments to function call, single argument "engine" was not specified
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3065/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4077/ : FAILURE

Compile error at [2020-06-05T09:58:27.820Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2639:53:
error: no matching function for call to ?test_harness::create_cookie()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4077/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3962/ : FAILURE

Compile error at [2020-06-05T09:57:02.305Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2639:53:
error: no matching function for call to ?test_harness::create_cookie()?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3962/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1101/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
